[COZY-369] fix : collect(Collectors.toList()) -> toList()로 수정